--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>האתר הלימודי</title>
   </head>
   <body>
-    <img src="images/th.jpg" alt="חסרה תמונה">
+    <img src="th.jpg" alt="חסרה תמונה">
     <h1>אפי ידין</h1>
     <p> <a href="http://matim.co.il">חברת מתאים מילניום</a></p>
     <p><em>לומד <strong>HTML</strong></em></p>
