--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>האתר הלימודי</title>
   </head>
-  <body>
+  <body style="background-color:red">
     <img src="images/th.jpg" alt="חסרה תמונה">
     <h1>אפי ידין</h1>
     <p> <a href="http://matim.co.il">חברת מתאים מילניום</a></p>
